# orca

./: .coveragerc  README.md  pyproject.toml  pytest.ini  ruff.ini
.github/workflows/: orca-cicd.yml
src/orca/: main.py
tests/: test_main.py
